# org-unit

./: .gitignore  CHANGELOG.md  Containerfile  Handover-State.md  README.md  architecture.md  concept.md  podman_build.sh  podman_db_backup.sh  podman_run.sh  pyproject.toml  requirements.md  review-checklist.md  start-phase1.sh
.github/workflows/: ci.yml  publish.yml
data/: .gitkeep
db_backup/: .gitkeep
src/org_unit/: database.py  main.py
src/org_unit/models/: assignment.py
src/org_unit/routers/: assignments.py  org_units.py  persons.py
src/zoo_org/: main.py
src/zoo_org/models/: org_unit.py  person.py
src/zoo_org/routers/: assignments.py  org_units.py  persons.py
static/: index.html
tests/: conftest.py  test_assignments.py  test_db_init.py  test_org_units.py  test_persons.py
