[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoo-org"
version = "0.1.0"
description = "Zoo organizational structure digitalization"
requires-python = ">=3.13"
dependencies = [
    "sw-dev-agent-framework>=0.1.1,<0.2",
    "fastapi>=0.136.1,<0.137",
    "uvicorn[standard]>=0.47,<0.48",
    "aiosqlite>=0.22,<0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<1.4",
    "httpx>=0.28,<0.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

