[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-unit"
version = "0.1.0"
description = "organizational structure digitalization"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "roebi", email = "your.email@example.com"}]
license = {text = "MIT"}
keywords = ["organization", "structure", "fastapi", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "sw-dev-agent-framework>=0.1.1,<0.2",
    "fastapi>=0.136.1,<0.137",
    "uvicorn[standard]>=0.47,<0.48",
    "aiosqlite>=0.22,<0.23",
]

[project.urls]
Homepage = "https://github.com/roebi/org-unit"
Repository = "https://github.com/roebi/org-unit.git"
Issues = "https://github.com/roebi/org-unit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<1.5",
    "httpx>=0.28,<0.29",
    "pip-audit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

